--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h1 class="text-center">Caulfield High School in the Early 1970s</h1>
 		<nav class="navbar navbar-expand mt-4">
 			<div class="container-fluid">
-				<ul class="navbar-nav justify-content-center gap-5 w-100">
+				<ul class="navbar-nav justify-content-center gap-1 gap-md-3 gap-lg-5 w-100">
 					<li class="nav-item"><a class="nav-link active" aria-current="page" href="">School Life</a></li>
 					<li class="nav-item"><a class="nav-link" href="">Funny Girl '72</a></li>
 					<li class="nav-item"><a class="nav-link" href="">Sneaky Magee '73</a></li>
