--- a/index.html
+++ b/index.html
@@ -1,44 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Your Own Gallery Point</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Your Own Gallery Point</title>
 
-	<!-- Bootstrap CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+		<!-- Bootstrap CSS -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous"
+		/>
 
-	<!-- Custom Styling -->
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<header class="container my-5">
-		<h1 class="text-center">Caulfield High School in the Early 1970s</h1>
-		<nav class="navbar navbar-expand mt-4">
-			<div class="container-fluid">
-				<ul class="navbar-nav justify-content-center gap-1 gap-md-3 gap-lg-5 w-100">
-					<li class="nav-item"><a class="nav-link active" aria-current="page" href="">School Life</a></li>
-					<li class="nav-item"><a class="nav-link" href="">Funny Girl '72</a></li>
-					<li class="nav-item"><a class="nav-link" href="">Sneaky Magee '73</a></li>
-					<li class="nav-item"><a class="nav-link" href="">One Hand Clapping '74</a></li>
-				</ul>
+		<!-- Custom Styling -->
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<header class="container my-5">
+			<h1 class="text-center">
+				Caulfield High School in the Early 1970s
+			</h1>
+			<nav class="navbar navbar-expand mt-4">
+				<div class="container-fluid">
+					<ul
+						class="navbar-nav justify-content-center gap-1 gap-md-3 gap-lg-5 w-100"
+					>
+						<li class="nav-item">
+							<a
+								class="nav-link active"
+								aria-current="page"
+								href=""
+								>School Life</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="">Funny Girl '72</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="">Sneaky Magee '73</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href=""
+								>One Hand Clapping '74</a
+							>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+
+		<main class="container mb-5">
+			<div class="gallery-grid mb-5">
+				<div class="gallery-item">
+					<img
+						src="media/CHS 2 24_021 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="media/CHS Shane 5545n 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="media/CHS 2 24_087 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="media/CHS 2 24_008 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="media/CHS 2 24_061 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="media/CHS PS 5835 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="media/CHS 2 24_054 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="media/CHS 2 24_013 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="media/CHS 6042 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
+				<div class="gallery-item">
+					<img
+						src="media/CHS 2 24_023 3.jpg"
+						alt=""
+						decoding="async"
+						loading="lazy"
+					/>
+				</div>
 			</div>
-		</nav>
-	</header>
+			<!-- <div class="pagination mx-auto">
+				<a href="#" class="arrow disabled" disabled></a>
+				<a href="#" class="active">1</a>
+				<a href="#">2</a>
+				<a href="#">3</a>
+				<a href="#">4</a>
+				<a href="#" class="arrow"></a>
+			</div> -->
+			<nav aria-label="Pagination">
+				<ul class="pagination">
+					<li class="page-item page-arrow disabled">
+						<a class="page-link">
+							<ion-icon name="arrow-back-outline"></ion-icon>
+						</a>
+					</li>
+					<li class="page-item active" aria-current="page">
+						<a class="page-link" href="#">1</a>
+					</li>
+					<li class="page-item">
+						<a class="page-link" href="#">2</a>
+					</li>
+					<li class="page-item">
+						<a class="page-link" href="#">3</a>
+					</li>
+					<li class="page-item">
+						<a class="page-link" href="#">4</a>
+					</li>
+					<li class="page-item page-arrow">
+						<a class="page-link" href="#">
+							<ion-icon name="arrow-forward-outline"></ion-icon>
+						</a>
+					</li>
+				</ul>
+			</nav>
+		</main>
 
-	<main class="container">
-		<div class="gallery-grid">
-			<div class="gallery-item"><img src="media/img-1.jpg" alt="" decoding="async" loading="lazy"></div>
-			<div class="gallery-item"><img src="media/img-2.jpg" alt="" decoding="async" loading="lazy"></div>
-			<div class="gallery-item"><img src="media/img-3.jpg" alt="" decoding="async" loading="lazy"></div>
-			<div class="gallery-item"><img src="media/img-4.jpg" alt="" decoding="async" loading="lazy"></div>
-			<div class="gallery-item"><img src="media/img-5.jpg" alt="" decoding="async" loading="lazy"></div>
-			<div class="gallery-item"><img src="media/img-6.jpg" alt="" decoding="async" loading="lazy"></div>
-		</div>
-	</main>
+		<!-- Boostrap JS -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+			crossorigin="anonymous"
+		></script>
 
-
-	<!-- Boostrap JS -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+		<!-- Ionic Icons -->
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+		></script>
+		<script
+			nomodule
+			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+		></script>
+	</body>
 </html>
