Added click animation

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 						decoding="async"
 						loading="lazy"
 					/>
+					<div class="gallery-item-large">
+						<img
+							src="media/CHS 2 24_021 16.jpg"
+							alt=""
+							decoding="async"
+						/>
+					</div>
 				</div>
 				<div class="gallery-item">
 					<img
@@ -133,14 +140,6 @@
 					/>
 				</div>
 			</div>
-			<!-- <div class="pagination mx-auto">
-				<a href="#" class="arrow disabled" disabled></a>
-				<a href="#" class="active">1</a>
-				<a href="#">2</a>
-				<a href="#">3</a>
-				<a href="#">4</a>
-				<a href="#" class="arrow"></a>
-			</div> -->
 			<nav aria-label="Pagination">
 				<ul class="pagination">
 					<li class="page-item page-arrow disabled">
@@ -185,5 +184,11 @@
 			nomodule
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
 		></script>
+
+		<!-- JQUERY cdn -->
+		<script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+
+		<!-- Custom JS -->
+		<script src="app.js"></script>
 	</body>
 </html>
