--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<header class="container my-5">
+		<header class="container my-3 my-sm-5">
 			<h1 class="text-center">
 				Caulfield High School in the Early 1970s
 			</h1>
-			<nav class="navbar navbar-expand mt-4">
-				<div class="container-fluid">
+			<nav class="navbar navbar-expand mt-2 mt-sm-4">
+				<div class="container-fluid p-0">
 					<ul
 						class="navbar-nav justify-content-center gap-1 gap-md-3 gap-lg-5 w-100"
 					>
@@ -50,7 +50,7 @@
 			</nav>
 		</header>
 
-		<main class="container mb-5">
+		<main class="container mb-2 mb-sm-5">
 			<div class="gallery-grid mb-5">
 				<div class="gallery-item">
 					<img
